k8s/11-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgtm-backend
  namespace: lgtm
spec:
  type: ClusterIP
  selector:
    app: lgtm-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
