k8s/21-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgtm-frontend
  namespace: lgtm
spec:
  type: ClusterIP
  selector:
    app: lgtm-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
