k8s/52-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: lgtm
  labels:
    app: otel-collector
spec:
  type: ClusterIP
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
