k8s/65-tempo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: lgtm
  labels:
    app: tempo
spec:
  type: ClusterIP
  selector:
    app: tempo
  ports:
    - name: http
      port: 3200
      targetPort: http
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
