k8s/68-loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: lgtm
  labels:
    app: loki
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: http
