k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm
  namespace: lgtm
spec:
  ingressClassName: traefik
  rules:
    - host: lgtm.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lgtm-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-frontend
                port:
                  number: 80
