k8s/42-kubo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubo
  namespace: lgtm
spec:
  ingressClassName: traefik
  rules:
    - host: ipfs.lgtm.local
      http:
        paths:
          - path: /ipfs
            pathType: Prefix
            backend:
              service:
                name: kubo
                port:
                  number: 8080
